# apm-grinold-kahn

./: pyproject.toml
data/: dow.py  sp500.py
notebooks/: ch-3.ipynb  demo.ipynb
utils/: pandas.py
