[tool.poetry]
name = "apm-grinold-kahn"
version = "0.1.0"
description = ""
authors = ["HRC"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.1"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
yfinance = "^0.2.65"
tqdm = "^4.67.1"
lxml = "^6.0.0"
duckdb = "^1.3.2"
notebook = "^7.4.4"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
